Removed auth (#12)
* Removed unused import

* Removed basic auth from swagger doc

* Removed dependency express-basic-auth

* Bumped Version to 1.1.0

* Fixed small vulnerabilities
