# openapi/openapi.json
@@ -28,16 +28,8 @@
                     },
                     "400": {
                         "description": "\"apiType\" query param is missing."
-                    },
-                    "401": {
-                        "description": "API call was not authenticated"
                     }
                 },
-                "security": [
-                    {
-                        "basic": []
-                    }
-                ],
                 "tags": [
                     "rules"
                 ]
@@ -72,16 +64,8 @@
                     },
                     "400": {
                         "description": "Provided request body is missing mandatory properties."
-                    },
-                    "401": {
-                        "description": "API call was not authenticated."
                     }
                 },
-                "security": [
-                    {
-                        "basic": []
-                    }
-                ],
                 "tags": [
                     "lintings"
                 ]
@@ -129,12 +113,6 @@
         }
     ],
     "components": {
-        "securitySchemes": {
-            "basic": {
-                "type": "http",
-                "scheme": "basic"
-            }
-        },
         "schemas": {
             "CreateLintingDto": {
                 "type": "object",
